# hft-market-making-2026

main/: CMakeLists.txt
src/strategy/: main_strategy.cpp
strategy/: CMakeLists.txt
task 1/: CMakeLists.txt
task 1/src/common/: CMakeLists.txt  OrderMessage.hpp  SPSCQueue.hpp  TradingChannel.hpp  TradingEngineAPI.hpp
task 1/test/: BasicTypesTest.cpp  CMakeLists.txt  LatencyBenchmark.cpp  ProtocolTest.cpp
